<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2012 Sergio Garcia Villalonga (yayalose@gmail.com)
This file is part of PalmaBici.
PalmaBici is free software: you can redistribute it and/or modify
it under the terms of the Affero GNU General Public License version 3
as published by the Free Software Foundation.
PalmaBici is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
Affero GNU General Public License for more details
(https://www.gnu.org/licenses/agpl-3.0.html).
-->


<!--
Copyright 2012 Sergio Garcia Villalonga (yayalose@gmail.com)
This file is part of PalmaBici.
PalmaBici is free software: you can redistribute it and/or modify
it under the terms of the Affero GNU General Public License version 3
as published by the Free Software Foundation.
PalmaBici is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
Affero GNU General Public License for more details
(https://www.gnu.org/licenses/agpl-3.0.html).
-->

<resources>

    <string name="app_name">PalmaBici</string>
    <string name="menu_report">Report</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_refresh">Syncronize</string>
    <string name="refresh_ongoing">Updating state...</string>
    <string name="refresh_succesful">Stations up to date!</string>
    <string name="visit_app_site">Go to the app web</string>
    <string name="get_code">Source code</string>
    <string name="view_agpl_license">AGPL v.3 license</string>
    <string name="view_apache_license">Apache v.2 license</string>
    <string name="credits_author">© 2012 Sergio García Villalonga (yayalose@gmail.com)</string>
    <string name="credits_license">This application is free/libre software and is distributed under the AGPL v.3 license. The library ActionBarSherlock is used (http://actionbarsherlock.com/, under the Apache v2.0 license). The whole text of both licenses can be accessed below.</string>
    <string name="credits_citybik">The information about the stations\' state is retrieved using the City Bikes API (http://www.citybik.es/), under the LGPL license.</string>
    <string name="credits_osm">The maps are retrieved using a slightly modified version of the OpenStreetMap API for Android osmdroid (https://code.google.com/p/osmdroid/), under the Apache v2.0 license. The modified code can be found in my GitHub page.</string>
    <string name="credits_osm_bonus">The station markers in the map have been implemented using a slightly modified version of the OSM Bonus Pack project (http://code.google.com/p/osmbonuspack/), under the LGPL license. The modified code can be found in my GitHub page.</string>
    <string name="credits_collaborate"> You are allowed to download and modify the source code of this app, as well as redistribute it with or without modifications under the same license. If you want to be part of the development, contact me :)</string>
    <string name="close">Close</string>
    <string name="preferences_synchronization">Synchronization</string>
    <string name="preferences_autoupdate">Auto update</string>
    <string name="preferences_autoupdate_tip">Automatically update the stations\' state</string>
    <string name="preferences_list">Stations list</string>
    <string name="preferences_sort">List order</string>
    <string name="preferences_sort_tip">Criteria for station list ordering</string>
    <string name="preferences_sort_favourites">Favorites first</string>
    <string name="preferences_sort_distance">Closests first</string>
    <string name="preferences_show_bike_lane">Show bike lane</string>
    <string name="preferences_map">Map</string>
    <string name="preferences_show_bike_lane_tip">Show bike lane and cycle streets in the map</string>
    <string name="preferences_alarms">Alarms</string>
    <string name="preferences_only_one_alarm">Only one alarm</string>
    <string name="preferences_only_one_alarm_tip">If there is more than one alarm set, only the first will ring.</string>
    <string name="preferences_alarm_timeout">Alarm timeout</string>
    <string name="preferences_alarm_timeout_tip">If there is no bike available in 20 minutes, the alarms are disabled (saves battery and data transmission).</string>
    <string name="connectivity_error">You don\'t have internet connection!</string>
    <string name="free_bikes">Free bikes</string>
    <string name="free_slots">Free slots</string>
    <string name="broken_bikes">Broken bikes</string>
    <string name="broken_slots">Broken slots</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_station_list_activity_test">StationListActivityTest</string>
    <string name="last_updated">Updated</string>
    <string name="ago">ago</string>
    <string name="more_than">more than</string>
    <string name="there_is">There is </string>
    <string name="there_are">There are </string>
    <string name="bike_available_in"> bike available in </string>
    <string name="bikes_available_in"> bikes available in </string>
    <string name="sidebar_list_settings">Settings</string>
    <string name="sidebar_list_qualify">Qualify me</string>
    <string name="sidebar_list_spread">Spread PalmaBici</string>
    <string name="sidebar_list_contact">Contact me</string>
    <string name="sidebar_list_credits">Credits</string>
    <string name="share_options">What do you want to highlight?</string>
    <string name="share_real_time_button">It lets you know the stations\' state in real time</string>
    <string name="share_alarm_button">It raises notifications when an empty station has some bike again</string>
    <string name="share_open_source_button">It is completely Open Source</string>
    <string name="share_real_time">I\'m using PalmaBici, the free Android app that lets you know the state of BiciPalma stations in real time</string>
    <string name="share_alarm">I\'m using PalmaBici, the free Android app that warns you when an empty BiciPalma station has bikes again</string>
    <string name="share_open_source">I\'m using PalmaBici, the Open Source AGPL Android app that lets you know the state of BiciPalma stations</string>
    <string name="share_get_it">- Get it on http://goo.gl/GDzlou</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="new_features_new">New!</string>
    <string name="new_features_1">Add alarms in the stations where there is no bike available, PalmaBici will warn you when there is some!</string>
    <string name="new_features_2">By default, if you set more than one alarm, only one will ring while the others will be disabled.</string>
    <string name="new_features_3">Also by default, to save your battery and data plan, if you set some alarm and there is no bike in 20 minutes or less, the alarms will be disabled.</string>
    <string name="new_features_4">This behavior can be changed in the preferences.</string>
    <string name="new_features_5">This version is an urgent one built to support the new third party data structures. It may be a little buggy. New updates will appear the next weeks. If the stations are not shown in the beggining, please perform an update with the top-right button.</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >@string/sidebar_list_settings</item>
        <item >@string/sidebar_list_credits</item>
        <item >@string/sidebar_list_contact</item>
        <item >@string/sidebar_list_spread</item>
        <item >@string/sidebar_list_qualify</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_settings_grey600_24dp</item>
        <item>@drawable/ic_mood_grey600_24dp</item>
        <item>@drawable/ic_email_grey600_24dp</item>
        <item>@drawable/ic_share_grey600_24dp</item>
        <item>@drawable/ic_star_grey600_24dp</item>
    </array>
</resources>