<?xml version="1.0" encoding="utf-8"?>

<!--

  Copyright 2012 Sergio Garcia Villalonga (yayalose@gmail.com)
  
  This file is part of PalmaBici.
  
  PalmaBici is free software: you can redistribute it and/or modify
  it under the terms of the Affero GNU General Public License version 3
  as published by the Free Software Foundation.
  
  PalmaBici is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  Affero GNU General Public License for more details
  (https://www.gnu.org/licenses/agpl-3.0.html).
    
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/credits_author"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/label_licenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/credits_license"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/label_collaborate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/credits_collaborate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_visit_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_app_site" />

        <Button
            android:id="@+id/button_source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_code" />

        <Button
            android:id="@+id/button_agpl_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_agpl_license" />

        <Button
            android:id="@+id/button_apache_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_apache_license" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />

    </LinearLayout>
</ScrollView>