<!--

  Copyright 2012 Sergio Garcia Villalonga (yayalose@gmail.com)
  
  This file is part of PalmaBici.
  
  PalmaBici is free software: you can redistribute it and/or modify
  it under the terms of the Affero GNU General Public License version 3
  as published by the Free Software Foundation.
  
  PalmaBici is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  Affero GNU General Public License for more details
  (https://www.gnu.org/licenses/agpl-3.0.html).
    
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
     <item android:id="@+id/menu_report"
        android:title="@string/menu_report"
        android:icon="@drawable/ic_action_mail"
        android:orderInCategory="1"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_preferences"
        android:title="@string/menu_preferences"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="0"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_credits"
        android:title="@string/menu_credits"
        android:icon="@drawable/ic_action_user"
        android:orderInCategory="1"
        android:showAsAction="never" />
</menu>