<?xml version="1.0" encoding="utf-8"?>

<!--

  Copyright 2012 Sergio Garcia Villalonga (yayalose@gmail.com)
  
  This file is part of PalmaBici.
  
  PalmaBici is free software: you can redistribute it and/or modify
  it under the terms of the Affero GNU General Public License version 3
  as published by the Free Software Foundation.
  
  PalmaBici is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  Affero GNU General Public License for more details
  (https://www.gnu.org/licenses/agpl-3.0.html).
    
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/menu_preferences">

    <CheckBoxPreference
        android:key="autoupdate"
        android:defaultValue="true"
        android:summary="@string/preferences_autoupdate_tip"
        android:title="@string/preferences_autoupdate">        
    </CheckBoxPreference>

</PreferenceScreen>