<?xml version="1.0" encoding="utf-8"?>

<!--

Copyright 2014 Sergio Garcia Villalonga (yayalose@gmail.com)
This file is part of PalmaBici.

PalmaBici is free software: you can redistribute it and/or modify
it under the terms of the Affero GNU General Public License version 3
as published by the Free Software Foundation.

PalmaBici is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
Affero GNU General Public License for more details
(https://www.gnu.org/licenses/agpl-3.0.html).

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_options"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/shareRealTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_real_time_button" />

    <Button
        android:id="@+id/shareAlarmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_alarm_button" />

    <Button
        android:id="@+id/shareOpenSourceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_open_source_button" />

</LinearLayout>
